2005-03-20  Erik Hjortsberg  <erik@katastrof.nu>

	* autopackage, hmm... let's see where this leads
	* added ember icon and desktop file
	* bumped version to 0.3.0
	* added make_dist_media.sh, for autogenerating the media dir. run it in the root dir. It requires a "media" dir directly under the root dir.

2005-03-20  Erik Hjortsberg  <erik@katastrof.nu>

	* EmberOgre.h: added convenience getRootSceneNode
	* EmberOgre.h: added and cleaned up comments
	* EmberOgre.cpp: setupJesus now loads all blockspecs, building blocks, modeldefinitions and blueprints (both global and user)
	* Jesus added methods for saving blueprints, these will be saved to ~/.ember/carpenter/blueprints/
	* Jesus now loads and holds all blueprints
	* BluePrint.cpp, BluePrint.h: make BuildingBlockBinding all const
	* made sure all blueprints have names
	* JesusEdit: added ability to save and load blueprints. This is very temporary and should use a better method and GUI.
	* MakeEntityWidget: added null checks
	* Widget.h: added comment

2005-03-20 Miguel Guzman (Aglanor)

	* added back Sound Service and reenabled the playsound command
	(type /playsound for a test)

2005-03-19  Miguel Guzman (Aglanor)

	* added name of speaking entity to chat widget line.

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* removed references to non-existant meshes

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added more comments

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added Name accessor to BluePrint, now all blueprint must have names
	* changed the way the bounding boxes are defined in the blockspec's, now you define the complete dimension of the bounding box (just easier to imagine it that way)
	* various fixes to Jesus, started on methods for loading a lot of BluePrints and keeping them in memory
	* fixes and clean ups for JesusEdit

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added and cleaned up comments

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>
