@@ -1,3 +1,8 @@
+2003-05-21 Miguel Guzman (Aglanor)
+
+	* The merchant now makes a sound when he speaks.
+	He'll yell "get your pig here!" in a strangely spanish accent.
+
 2005-03-20  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* autopackage, hmm... let's see where this leads
